--- a/css/style.css
+++ b/css/style.css
@@ -1281,27 +1281,19 @@ footer .credits a {
 }
 
 
-.cursor {
-  display: inline-block;
-  width: 10px;
-  height: 20px;
-  background-color: #00ff00; /* Green cursor */
-  margin-left: 2px;
-  animation: blink 1s infinite;
-  /* Prevent default text caret overlap */
-  caret-color: transparent;
-}
-
-
-
-@keyframes blink {
-  0%, 50% {
-    opacity: 1;
+  .cursor {
+    display: inline-block;
+    width: 10px;
+    height: 20px;
+    background-color: #00ff00;
+    animation: blink 1s steps(1) infinite;
   }
-  51%, 100% {
-    opacity: 0;
+
+  @keyframes blink {
+    50% {
+      opacity: 0;
+    }
   }
-}
 
 
 /* Keep the title styling as default */
