--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ a {
 }
 
 a:hover {
-  color: #0078ff;
+  color: #00ff00;
   text-decoration: none;
   transition: all 0.5s ease-in-out;
 }
@@ -39,7 +39,7 @@ a:hover {
 }
 
 .color-a {
-  color: #0078ff;
+  color: #00ff00;
 }
 
 .color-d {
@@ -90,7 +90,7 @@ a:hover {
 }
 
 .overlay-mf {
-  background-color: #0078ff;
+  background-color: #00ff00;
 }
 
 .overlay-mf {
@@ -160,7 +160,7 @@ a:hover {
 .line-mf {
   width: 40px;
   height: 5px;
-  background-color: #0078ff;
+  background-color: #00ff00;
   margin: 0 auto;
 }
 
@@ -179,7 +179,7 @@ a:hover {
   content: '';
   position: absolute;
   height: 3px;
-  background-color: #0078ff;
+  background-color: #00ff00;
   width: 100px;
   bottom: -12px;
 }
@@ -218,12 +218,12 @@ a:hover {
   border-radius: 50%;
   line-height: 1.4;
   margin: 0 15px 0 0;
-  box-shadow: 0 0 0 3px #0078ff;
+  box-shadow: 0 0 0 3px #00ff00;
   transition: all 500ms ease;
 }
 
 .socials .ico-circle:hover {
-  background-color: #0078ff;
+  background-color: #00ff00;
   color: #fff;
   box-shadow: 0 0 0 3px #cde1f8;
   transition: all 500ms ease;
@@ -253,7 +253,7 @@ a:hover {
 }
 
 .list-ico span {
-  color: #0078ff;
+  color: #00ff00;
   margin-right: 10px;
 }
 
@@ -267,7 +267,7 @@ a:hover {
   line-height: 1.55;
   margin: 0 auto;
   text-align: center;
-  box-shadow: 0 0 0 10px #0078ff;
+  box-shadow: 0 0 0 10px #00ff00;
   display: block;
 }
 
@@ -314,7 +314,7 @@ a:hover {
   position: fixed;
   width: 42px;
   height: 42px;
-  background-color: #0078ff;
+  background-color: #00ff00;
   opacity: .7;
   font-size: 1.6rem;
   line-height: 1.5;
@@ -333,7 +333,7 @@ a:hover {
 .back-to-top {
   position: fixed;
   display: none;
-  background: #0078ff;
+  background: #00ff00;
   color: #fff;
   width: 44px;
   height: 44px;
@@ -371,7 +371,7 @@ a:hover {
   top: calc(50% - 30px);
   left: calc(50% - 30px);
   border: 6px solid #f2f2f2;
-  border-top: 6px solid #0078ff;
+  border-top: 6px solid #00ff00;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -488,26 +488,26 @@ a:hover {
 }
 
 .navbar-b.navbar-reduce .nav-link {
-  color: #0078ff;
+  color: #00ff00;
 }
 
 .navbar-b.navbar-reduce .nav-link:before {
-  background-color: #0078ff;
+  background-color: #00ff00;
 }
 
 .navbar-b.navbar-reduce .nav-link:hover {
-  color: #0078ff;
+  color: #00ff00;
 }
 
 .navbar-b.navbar-reduce .show > .nav-link,
 .navbar-b.navbar-reduce .active > .nav-link,
 .navbar-b.navbar-reduce .nav-link.show,
 .navbar-b.navbar-reduce .nav-link.active {
-  color: #0078ff;
+  color: #00ff00;
 }
 
 .navbar-b.navbar-reduce .navbar-brand {
-  color: #0078ff;
+  color: #00ff00;
 }
 
 .navbar-b.navbar-reduce .navbar-toggler span {
@@ -545,7 +545,7 @@ a:hover {
 }
 
 .navbar-b .dropdown-menu .dropdown-item.active {
-  background-color: #0078ff;
+  background-color: #00ff00;
 }
 
 /*--/ Hamburger Navbar /--*/
@@ -659,7 +659,7 @@ a:hover {
 
 .intro-single .breadcrumb {
   background-color: transparent;
-  color: #0078ff;
+  color: #00ff00;
 }
 
 .intro-single .breadcrumb .breadcrumb-item:before {
@@ -733,7 +733,7 @@ a:hover {
 
 .skill-mf .progress .progress-bar {
   height: .7rem;
-  background-color: #0078ff;
+  background-color: #00ff00;
 }
 
 .skill-mf span {
@@ -749,7 +749,7 @@ a:hover {
 
 .skill-mf .progress .progress-bar {
   height: .7rem;
-  background-color: #0078ff;
+  background-color: #00ff00;
 }
 
 /*======================================
@@ -766,7 +766,7 @@ a:hover {
 .service-box:hover .ico-circle {
   transition: all 500ms ease;
   color: #fff;
-  background-color: #0078ff;
+  background-color: #00ff00;
   box-shadow: 0 0 0 10px #cde1f8;
 }
 
@@ -851,17 +851,17 @@ a:hover {
 }
 
 .work-content .w-more .w-ctegory {
-  color: #0078ff;
+  color: #00ff00;
 }
 
 .work-content .w-like {
   font-size: 2.5rem;
-  color: #0078ff;
+  color: #00ff00;
   float: right;
 }
 
 .work-content .w-like a {
-  color: #0078ff;
+  color: #00ff00;
 }
 
 .work-content .w-like .num-like {
@@ -904,7 +904,7 @@ a:hover {
 
 .testimonial-box .comit {
   font-size: 2rem;
-  color: #0078ff;
+  color: #00ff00;
   background-color: #fff;
   width: 52px;
   height: 52px;
@@ -937,7 +937,7 @@ a:hover {
   color: #fff;
   padding: 0 15px 5px;
   overflow: hidden;
-  background-color: #0078ff;
+  background-color: #00ff00;
   border-radius: 4px;
 }
 
@@ -991,7 +991,7 @@ a:hover {
 }
 
 .blog-wrapper .post-meta ul {
-  border-left: 4px solid #0078ff;
+  border-left: 4px solid #00ff00;
   margin-top: 1rem;
 }
 
@@ -1001,7 +1001,7 @@ a:hover {
 }
 
 .blog-wrapper .post-meta ul a {
-  color: #0078ff;
+  color: #00ff00;
 }
 
 .blog-wrapper .post-meta ul span {
@@ -1009,7 +1009,7 @@ a:hover {
 }
 
 .blog-wrapper .blockquote {
-  border-left: 4px solid #0078ff;
+  border-left: 4px solid #00ff00;
   padding: 18px;
   font-style: italic;
 }
@@ -1041,7 +1041,7 @@ a:hover {
 }
 
 .box-comments .list-comments a {
-  color: #0078ff;
+  color: #00ff00;
 }
 
 .box-comments .list-comments span {
@@ -1058,7 +1058,7 @@ a:hover {
 .widget-sidebar .sidebar-title {
   font-size: 1.6rem;
   font-weight: 600;
-  border-left: 5px solid #0078ff;
+  border-left: 5px solid #00ff00;
   padding-left: 15px;
   text-transform: uppercase;
   margin-bottom: 1.5rem;
@@ -1075,7 +1075,7 @@ a:hover {
   width: 10px;
   height: 1px;
   left: 0;
-  background-color: #0078ff;
+  background-color: #00ff00;
   top: 20px;
 }
 
@@ -1086,8 +1086,8 @@ a:hover {
 }
 
 .sidebar-search .btn-search {
-  background-color: #0078ff;
-  border-color: #0078ff;
+  background-color: #00ff00;
+  border-color: #00ff00;
   border-radius: 0;
   padding-left: 20px;
   padding-right: 20px;
@@ -1095,7 +1095,7 @@ a:hover {
 
 .widget-tags ul li {
   display: inline-block;
-  background-color: #0078ff;
+  background-color: #00ff00;
   padding: .2rem .6rem;
   margin-bottom: .5rem;
   border-radius: 15px;
@@ -1144,8 +1144,8 @@ footer .credits a {
 ======================================*/
 
 #sendmessage {
-  color: #0078ff;
-  border: 1px solid #0078ff;
+  color: #00ff00;
+  border: 1px solid #00ff00;
   display: none;
   text-align: center;
   padding: 15px;
@@ -1208,7 +1208,7 @@ footer .credits a {
 }
 
 .button-a {
-  background-color: #0078ff;
+  background-color: #00ff00;
   color: #fff;
   border-color: #cde1f8;
 }
